# sherpa

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml  railway.toml  requirements.txt  run_all_tests.py  setup.sh  test_agent_system.py  test_style_system.py
.github/workflows/: pr-checks.yml
activities/: bridge.yaml  swap.yaml
activities/strategies/: dca.yaml
agentic_wallet_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  cache.py  config.py  logging_config.py  main.py
app/agent_runtime/: __init__.py  router.py  run.py  runtime.py  strategy.py
app/api/: agent.py  auth.py  bungee.py  chat.py  conversations.py  copy_trading.py  dca.py  entitlement.py  health.py  history_summary.py  llm.py  news.py  permissions.py  perps.py  policy.py  polymarket.py  relay.py  smart_accounts.py  strategies.py  swap.py  swig_wallets.py  tools.py  webhooks.py
app/auth/: __init__.py  middleware.py  models.py  service.py  solana_signin.py
app/core/: chain_types.py  chat.py
app/db/: __init__.py  (+1 more)
docs/: CODEBASE_MAP.md  PLANNING_SYSTEM.md  persona_customization.md
personas/: educational.yaml  friendly.yaml  friendly_backup.yaml  professional.yaml  technical.yaml
scripts/: benchmark_history.sh  commit.sh  test_alchemy_slugs.py  test_bridge_flow.py  test_chat.py  test_convex.py
tests/: test_address_services.py  test_agent_system.py  test_agent_tools.py  test_api.py  test_bungee_public.py  test_config_settings.py  test_conversations_api.py  test_copy_trading.py  test_event_monitoring.py  test_relay_public.py  test_style_system.py
(+235 files in other folders)
